doc2vec_V3 model, refactored model training and dataset processing into one notebook

--- a/train_d2v.ipynb
+++ b/train_d2v.ipynb
@@ -9,12 +9,13 @@
    },
    "outputs": [],
    "source": [
-    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument, Word2Vec\n",
     "import nltk\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import PyPDF2\n",
+    "import pdfplumber\n",
     "import re\n",
+    "import faiss\n",
     "\n",
     "from io import StringIO\n",
     "from html.parser import HTMLParser"
@@ -108,10 +109,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df[['a_req', 'p_req', 'p_res']] = df[['additional_requirements', 'position_requirements' , 'position_responsibilities']].astype(str)\n",
-    "df['total_req'] = df['a_req'] + ' ' + df['p_req'] + ' ' + df['p_res']\n",
+    "df[['vac', 'sph', 'a_req', 'p_req', 'p_res']] = df[['vacancy_name', 'professionalSphereName', 'additional_requirements', 'position_requirements' , 'position_responsibilities']].astype(str)\n",
+    "df['total_req'] = df['vac'] + ' ' + df['sph'] + ' ' + df['a_req'] + ' ' + df['p_req'] + ' ' + df['p_res']\n",
     "df['total_req'] = df['total_req'].str.replace('nan', '').str.strip(' ')\n",
-    "df['total_req'] = df['total_req'].apply(lambda x: re.sub(r'[^\\w\\s]', '', strip_tags(x.lower())))  # remove HTML tags, lower case, remove punctuation\n",
+    "df['total_req'] = df['total_req'].apply(lambda x: strip_tags(x.lower()))  # remove HTML tags, lower case\n",
+    "# df['total_req'] = df['total_req'].apply(lambda x: re.sub(r'[^\\w\\s]', '', strip_tags(x.lower())))  # remove HTML tags, lower case, remove punctuation\n",
     "df.head()"
    ],
    "metadata": {
@@ -148,9 +150,9 @@
    "outputs": [],
    "source": [
     "model = Doc2Vec(\n",
-    "    vector_size = 50,\n",
+    "    vector_size = 80,\n",
     "    min_count = 10,\n",
-    "    epochs = 50\n",
+    "    epochs = 70\n",
     ")"
    ],
    "metadata": {
@@ -199,12 +201,218 @@
     "model.train(tagged_data,\n",
     "total_examples = model.corpus_count,\n",
     "epochs = model.epochs)\n",
-    "model.save('model/doc2vec_v2.model')"
+    "model.save('model/doc2vec_v4.model')"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "ddd9fa264e1025d8"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Get Embeddings for dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "252c9c8625ec787a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "jobs = pd.read_csv('data/hhparser_vacancy_short.csv')\n",
+    "jobs.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "97bb28456b03dac5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "process data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9fa5be970ebd0456"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "jobs['content'] = jobs['name'] + ' ' + jobs['description']\n",
+    "jobs['content'] = jobs['content'].astype(str)\n",
+    "jobs['content'] = jobs['content'].apply(lambda x: strip_tags(x.lower()))  # Remove HTML, lower case\n",
+    "# jobs['content'] = jobs['content'].apply(lambda x: re.sub(r'[^\\w\\s]', '', strip_tags(x.lower())))  # Remove HTML, lower case\n",
+    "jobs.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e619d5434d6e029d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "get vectors"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5ddab088120ac7e7"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# model = Doc2Vec.load('model/doc2vec_v3.model')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "598193c1fbe866c5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "jobs['embd'] = jobs['content'].apply(lambda x: model.infer_vector(x.split()))\n",
+    "jobs.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a22735b3d6925116"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "write vectors to FAISS index and store them. id's should match the jobs csv"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5bee03537dce3be5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "index = faiss.IndexFlatL2(80)  # size from model params in train_d2v\n",
+    "print(index.is_trained)\n",
+    "index.add(np.array(jobs.embd.values.tolist()))\n",
+    "print(index.ntotal)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dfa8b2661da95967"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "faiss.write_index(index, \"model/hh_v3.index\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1d66bc7298365275"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Testing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d20c494e550eb016"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "resume = []\n",
+    "\n",
+    "with pdfplumber.open('data/TSheyd.pdf') as pdf:\n",
+    "    for page in pdf.pages:\n",
+    "        text = page.extract_text(x_tolerance=2)  # Adjust x_tolerance as needed\n",
+    "        if text:\n",
+    "            text = re.sub(r'\\s+', ' ', text)  # Normalize whitespace\n",
+    "            text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "            resume.append(text)\n",
+    "    \n",
+    "# resume = ' '.join([e.replace('\\n', ' ').lower() for e in resume])\n",
+    "resume = ' '.join([e.replace('\\n', ' ').lower() for e in resume])\n",
+    "\n",
+    "resume"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b75f64c49ed32d46"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "v1 = np.array([model.infer_vector(resume.split())])"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "50adeb04991e2aef"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# find the closest embedding in index\n",
+    "distances, indices = index.search(v1, 5)\n",
+    "distances, indices"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "488a8f4795e8a67a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "jobs.loc[indices[0]]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "12ddc0a226c3ee66"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "jobs.loc[[56095, 36538, 46670, 73768, 80933]]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c61ec255da519dcc"
   }
  ],
  "metadata": {
