model: added english job postings to train dataset

--- a/train_d2v.ipynb
+++ b/train_d2v.ipynb
@@ -67,6 +67,19 @@
    "id": "206d52cdf73054ca"
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "edf = pd.read_csv('data/en_job_postings.csv')  # kaggle LinkedIn dataset for English data\n",
+    "edf"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6be460e68662bd58"
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Preprocessing - remove HTML tags, lowercase everything, remove punctuation"
@@ -126,7 +139,23 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "data = df['total_req'].values.tolist()\n",
+    "edf[['title', 'description']] = edf[['title', 'description']].astype(str) \n",
+    "edf['total_req'] = edf['title'] + ' ' + edf['description']\n",
+    "edf['total_req'] = edf['total_req'].str.replace('nan', '').str.strip(' ')\n",
+    "edf['total_req'] = edf['total_req'].apply(lambda x: strip_tags(x.lower()))  # remove HTML tags, lower case\n",
+    "edf.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e138caceda934405"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data = df['total_req'].values.tolist() + edf['total_req'].values.tolist()\n",
     "tagged_data = [TaggedDocument(words = nltk.tokenize.word_tokenize(_d), tags = [str(i)]) for i, _d in enumerate(data)]"
    ],
    "metadata": {
@@ -201,7 +230,7 @@
     "model.train(tagged_data,\n",
     "total_examples = model.corpus_count,\n",
     "epochs = model.epochs)\n",
-    "model.save('model/doc2vec_v4.model')"
+    "model.save('model/doc2vec_v4en.model')"
    ],
    "metadata": {
     "collapsed": false
@@ -322,7 +351,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "faiss.write_index(index, \"model/hh_v3.index\")"
+    "faiss.write_index(index, \"model/hh_v4en.index\")"
    ],
    "metadata": {
     "collapsed": false
@@ -344,17 +373,56 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "font_sizes = []\n",
+    "weighted_text = []\n",
+    "\n",
+    "with pdfplumber.open('data/sample2.pdf') as pdf:\n",
+    "    for page in pdf.pages:\n",
+    "        words = page.extract_words(x_tolerance=2, keep_blank_chars=True, use_text_flow=True, extra_attrs=[\"fontname\", \"size\"])\n",
+    "        font_sizes.extend([float(word['size']) for word in words])\n",
+    "\n",
+    "    # Calculate median font size\n",
+    "    median_size = np.median(font_sizes)\n",
+    "    \n",
+    "    # a bit of processing - some non-letter chars can be considered as spaces\n",
+    "\n",
+    "    for word in words:\n",
+    "        word_text = word['text'].replace('/', ' ').replace('-', ' ').strip('.,').lower()\n",
+    "        word_size = float(word['size'])\n",
+    "\n",
+    "        # Assign weight based on font size (example: 2x for each size unit above median)\n",
+    "        if word_size > median_size:\n",
+    "            weight = (word_size * 1.2 / median_size)\n",
+    "        else:\n",
+    "            weight = 1\n",
+    "\n",
+    "        # Replicate word based on weight\n",
+    "        weighted_text.extend([word_text] * int(round(weight)))\n",
+    "\n",
+    "weighted_text = \" \".join([e for e in weighted_text if any(c.isalpha() for c in e)]).split()\n",
+    "\n",
+    "weighted_text"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5826116ddb431c0f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "resume = []\n",
     "\n",
-    "with pdfplumber.open('data/TSheyd.pdf') as pdf:\n",
+    "with pdfplumber.open('data/sample2.pdf') as pdf:\n",
     "    for page in pdf.pages:\n",
-    "        text = page.extract_text(x_tolerance=2)  # Adjust x_tolerance as needed\n",
+    "        text = page.extract_text(x_tolerance=2)\n",
     "        if text:\n",
     "            text = re.sub(r'\\s+', ' ', text)  # Normalize whitespace\n",
-    "            text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "            text = re.sub(r'[^\\w\\s]', '', text)  # Remove punctuation\n",
     "            resume.append(text)\n",
-    "    \n",
-    "# resume = ' '.join([e.replace('\\n', ' ').lower() for e in resume])\n",
+    "\n",
     "resume = ' '.join([e.replace('\\n', ' ').lower() for e in resume])\n",
     "\n",
     "resume"
@@ -369,18 +437,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "v1 = np.array([model.infer_vector(resume.split())])"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "50adeb04991e2aef"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "v1 = np.array([model.infer_vector(weighted_text)])\n",
+    "\n",
     "# find the closest embedding in index\n",
     "distances, indices = index.search(v1, 5)\n",
     "distances, indices"
@@ -401,18 +459,6 @@
     "collapsed": false
    },
    "id": "12ddc0a226c3ee66"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "jobs.loc[[56095, 36538, 46670, 73768, 80933]]"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c61ec255da519dcc"
   }
  ],
  "metadata": {
