--- a/grisha_delaet_dela.ipynb
+++ b/grisha_delaet_dela.ipynb
@@ -4113,11 +4113,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "777d9b65-42ca-4748-ba89-804921b55e17",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "altair==5.2.0\n",
+      "anyio==4.2.0\n",
+      "appnope==0.1.3\n",
+      "argon2-cffi==23.1.0\n",
+      "argon2-cffi-bindings==21.2.0\n",
+      "arrow==1.3.0\n",
+      "asttokens==2.4.1\n",
+      "async-lru==2.0.4\n",
+      "attrs==23.1.0\n",
+      "Babel==2.14.0\n",
+      "beautifulsoup4==4.12.2\n",
+      "bleach==6.1.0\n",
+      "blinker==1.7.0\n",
+      "cachetools==5.3.2\n",
+      "certifi==2023.11.17\n",
+      "cffi==1.16.0\n",
+      "charset-normalizer==3.3.2\n",
+      "click==8.1.7\n",
+      "comm==0.2.0\n",
+      "cryptography==41.0.7\n",
+      "debugpy==1.8.0\n",
+      "decorator==5.1.1\n",
+      "defusedxml==0.7.1\n",
+      "exceptiongroup==1.2.0\n",
+      "executing==2.0.1\n",
+      "faiss-cpu==1.7.4\n",
+      "fastjsonschema==2.19.0\n",
+      "fasttext==0.9.2\n",
+      "fqdn==1.5.1\n",
+      "gensim==4.3.2\n",
+      "gitdb==4.0.11\n",
+      "GitPython==3.1.40\n",
+      "idna==3.6\n",
+      "importlib-metadata==6.11.0\n",
+      "ipykernel==6.27.1\n",
+      "ipython==8.18.1\n",
+      "isoduration==20.11.0\n",
+      "jedi==0.19.1\n",
+      "Jinja2==3.1.2\n",
+      "joblib==1.3.2\n",
+      "json5==0.9.14\n",
+      "jsonpointer==2.4\n",
+      "jsonschema==4.20.0\n",
+      "jsonschema-specifications==2023.11.2\n",
+      "jupyter-events==0.9.0\n",
+      "jupyter-lsp==2.2.1\n",
+      "jupyter_client==8.6.0\n",
+      "jupyter_core==5.5.1\n",
+      "jupyter_server==2.12.1\n",
+      "jupyter_server_terminals==0.5.0\n",
+      "jupyterlab==4.0.9\n",
+      "jupyterlab_pygments==0.3.0\n",
+      "jupyterlab_server==2.25.2\n",
+      "markdown-it-py==3.0.0\n",
+      "MarkupSafe==2.1.3\n",
+      "matplotlib-inline==0.1.6\n",
+      "mdurl==0.1.2\n",
+      "mistune==3.0.2\n",
+      "nbclient==0.9.0\n",
+      "nbconvert==7.13.1\n",
+      "nbformat==5.9.2\n",
+      "nest-asyncio==1.5.8\n",
+      "notebook==7.0.6\n",
+      "notebook_shim==0.2.3\n",
+      "numpy==1.26.2\n",
+      "overrides==7.4.0\n",
+      "packaging==23.2\n",
+      "pandas==2.1.4\n",
+      "pandocfilters==1.5.0\n",
+      "parso==0.8.3\n",
+      "pdfminer.six==20221105\n",
+      "pdfplumber==0.10.3\n",
+      "pexpect==4.9.0\n",
+      "Pillow==10.1.0\n",
+      "platformdirs==4.1.0\n",
+      "prometheus-client==0.19.0\n",
+      "prompt-toolkit==3.0.43\n",
+      "protobuf==4.25.1\n",
+      "psutil==5.9.7\n",
+      "ptyprocess==0.7.0\n",
+      "pure-eval==0.2.2\n",
+      "pyarrow==14.0.2\n",
+      "pybind11==2.11.1\n",
+      "pycparser==2.21\n",
+      "pydeck==0.8.1b0\n",
+      "Pygments==2.17.2\n",
+      "pypdfium2==4.25.0\n",
+      "python-dateutil==2.8.2\n",
+      "python-json-logger==2.0.7\n",
+      "pytz==2023.3.post1\n",
+      "PyYAML==6.0.1\n",
+      "pyzmq==25.1.2\n",
+      "referencing==0.32.0\n",
+      "requests==2.31.0\n",
+      "rfc3339-validator==0.1.4\n",
+      "rfc3986-validator==0.1.1\n",
+      "rich==13.7.0\n",
+      "rpds-py==0.15.2\n",
+      "scikit-learn==1.3.2\n",
+      "scipy==1.11.4\n",
+      "Send2Trash==1.8.2\n",
+      "six==1.16.0\n",
+      "smart-open==6.4.0\n",
+      "smmap==5.0.1\n",
+      "sniffio==1.3.0\n",
+      "soupsieve==2.5\n",
+      "stack-data==0.6.3\n",
+      "streamlit==1.29.0\n",
+      "tenacity==8.2.3\n",
+      "terminado==0.18.0\n",
+      "threadpoolctl==3.2.0\n",
+      "tinycss2==1.2.1\n",
+      "toml==0.10.2\n",
+      "tomli==2.0.1\n",
+      "toolz==0.12.0\n",
+      "tornado==6.4\n",
+      "traitlets==5.14.0\n",
+      "types-python-dateutil==2.8.19.14\n",
+      "typing_extensions==4.9.0\n",
+      "tzdata==2023.3\n",
+      "tzlocal==5.2\n",
+      "uri-template==1.3.0\n",
+      "urllib3==2.1.0\n",
+      "validators==0.22.0\n",
+      "wcwidth==0.2.12\n",
+      "webcolors==1.13\n",
+      "webencodings==0.5.1\n",
+      "websocket-client==1.7.0\n",
+      "zipp==3.17.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip freeze"
+   ]
   },
   {
    "cell_type": "code",
