boje dai nam sil 2

--- a/grisha_delaet_dela.ipynb
+++ b/grisha_delaet_dela.ipynb
@@ -4259,8 +4259,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "5beb15c1-a418-4782-bdbc-91d282ecb6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a1b862e3-0ad3-4698-9eb8-fc78167917b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cc.ru.300.bin                     hh.index\n",
+      "doc2vec_v4en.model                hh_v4en.index\n",
+      "doc2vec_v4en.model.dv.vectors.npy knn.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "66350e85-6f1c-46e5-ab3d-79f31a37f41d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1eb380a7-bde8-482b-aedf-73e99068a823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md                \u001b[34mdata\u001b[m\u001b[m                     requirements.txt\n",
+      "app.py                   grisha_delaet_dela.ipynb train_d2v.ipynb\n",
+      "\u001b[34mcache\u001b[m\u001b[m                    \u001b[34mmodel\u001b[m\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d5e10c2-3ee6-4c1a-818a-27a017b23dde",
    "metadata": {},
    "outputs": [],
    "source": []
